fix(mobile): Fix till the event positioning on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -565,6 +565,11 @@ table thead th:not(:first-child) {
     display: inline;
     margin-right: 0.5em;
   }
+
+  @media (max-width: $mobile-breakpoint) {
+    grid-column: 4 / span 3;
+    margin-bottom: 1em;
+  }
 }
 
 #schedule {
